--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link rel="stylesheet"  href="quizer.css">
 </head>
 <body>
-    <div id="obj1">
-        webpage running successfully
-    </div>
+    <input id="ipt" type="text">
+    <button id="btn">submit</button>
     <script src="quizer.js"></script>
 </body>
